[package]
name = "tweet"
version = "0.1.0"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.3", features = ["blocking", "json"] }
rand = "0.7.3"
url = "2.1.1"
hmac-sha1 = "0.1.3"
base64 = "0.11.0"
envy = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
percent-encoding = "2.1.0"
